--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-stubs",
-  "version": "0.8.3",
+  "version": "0.9.0",
   "description": "",
   "main": "dist/index.js",
   "repository": {
@@ -35,26 +35,26 @@
   "author": "Peter Lanser",
   "license": "MIT",
   "devDependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/common": "^9.0.0",
+    "@angular/compiler": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/forms": "^9.0.0",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^9.0.0",
     "@types/jest": "^22.1.1",
     "jest": "^22.1.4",
     "jest-zone-patch": "0.0.8",
-    "rxjs": "~6.4.0",
+    "rxjs": "6.5.5",
     "ts-jest": "^22.0.3",
-    "typescript": "~3.4.3rm -",
-    "zone.js": "^0.9.1"
+    "typescript": "3.8.3",
+    "zone.js": "0.10.3"
   },
   "peerDependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0"
+    "@angular/common": "^9.0.0",
+    "@angular/compiler": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/forms": "^9.0.0",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^9.0.0"
   }
 }
