--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-stubs",
-  "version": "0.13.0",
+  "version": "0.14.0",
   "description": "",
   "main": "dist/index.js",
   "repository": {
@@ -30,26 +30,27 @@
   "author": "Peter Lanser",
   "license": "MIT",
   "devDependencies": {
-    "@angular/common": "^13.0.0",
-    "@angular/compiler": "^13.0.0",
-    "@angular/core": "^13.0.0",
-    "@angular/forms": "^13.0.0",
-    "@angular/platform-browser": "^13.0.0",
-    "@angular/platform-browser-dynamic": "^13.0.0",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
     "@types/jest": "^27.0.3",
-    "jest": "^27.3.1",
-    "jest-preset-angular": "^11.0.1",
+    "jest": "^28.0.0",
+    "jest-environment-jsdom": "^28.1.3",
+    "jest-preset-angular": "^12.2.0",
     "rxjs": "6.5.5",
     "ts-jest": "^27.0.7",
     "typescript": "4.4.4",
     "zone.js": "0.11.4"
   },
   "peerDependencies": {
-    "@angular/common": "^13.0.0",
-    "@angular/compiler": "^13.0.0",
-    "@angular/core": "^13.0.0",
-    "@angular/forms": "^13.0.0",
-    "@angular/platform-browser": "^13.0.0",
-    "@angular/platform-browser-dynamic": "^13.0.0"
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0"
   }
 }
